--- a/frontend/src/stylesheets/styles.css
+++ b/frontend/src/stylesheets/styles.css
@@ -1,7 +1,3 @@
-#mainDiv {
-    
-}
-
 #headerDescription {
     font-size: 22px;
     color: #4e524e;
@@ -11,24 +7,48 @@
     display: inline;
 }
 
+.lessPM {
+    padding-top: 1px;
+    padding-bottom: 1px;
+}
+
+.contact-info {
+    font-size: large;
+    background-color: #efefef;
+}
+
+.contact-content {
+    margin: 25px;
+    padding: 25px;
+}
+
+.content {
+    background-color: #efefef;
+    width: auto;
+    height: 40em;
+}
+
 #bodyDiv {
     padding-top: 1px;
     height: 75vh;
     margin-top: 20px;
     /* margin-bottom: 20px; */
     text-align: center;
-    background-color: #faeadc;
+    background-color: #efefef;
 }
 
 #paragraphDiv {
     margin-left: 20%;
     margin-right: 20%;
+    font-size: 20px;
 }
 
 h1 {
     font-size: 50px;
     color: #4e524e;
-    margin: 35px;
+    margin-left: 35px;
+    margin-right: 35px;
+    margin-top: 15px;
     margin-bottom: 5px;
 }
 
@@ -40,20 +60,22 @@ h2 {
 h3 {
     font-size: 25px;
     margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 25px;
 }
 
-p {
+.indexP {
     margin: 15px;
-    line-height: normal;
+    line-height: 30px;
 }
 
-ul, li, #navBar {
+ul, li, .navInline {
     display: inline;
 }
 
-ul {
+/* ul {
     margin-left: 75px;
-}
+} */
 
 a:link, a:visited {
     color: #4e524e;
@@ -67,7 +89,6 @@ a:hover {
 li {
     margin-left: 25px;
     margin-right: 25px;
-
 }
 
 i {
@@ -78,11 +99,18 @@ b {
     font-weight: bold;
 }
 
+.svg-container {
+    width: 5em;
+    height: 5em;
+    display: inline;
+}
+
 #footerParagraph {
     margin-top: 0px;
+    padding-top: 10px;
 }
 
 footer {
-    background-color:#ed3e3e;
-    padding-bottom: 5%;
+    background-color:#ff3b3f;
+    padding-bottom: 5px;
 }
