--- a/frontend/src/stylesheets/styles.css
+++ b/frontend/src/stylesheets/styles.css
@@ -1,144 +1,190 @@
-#headerDescription {
-    font-size: 22px;
-    color: #4e524e;
-    margin-left: 40px;
-    margin-right: 50px;
-    margin-bottom: 35px;
-    display: inline;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&display=swap');
+
+* {
+    box-sizing: border-box;
 }
 
-.lessPM {
-    padding-top: 1px;
-    padding-bottom: 1px;
+html {
+    font-family: 'Montserrat', sans-serif;
+
 }
 
-.contact-info {
-    font-size: large;
-    background-color: #efefef;
+body {
+    background-color: hsl(0deg 0% 13%);
+    line-height: 2rem;
 }
 
-.contact-content {
-    margin: 25px;
-    padding: 25px;
-}
-
-.about-content {
-    margin: 0 auto;
-    text-align: center;
-    width: 25%;
-}
-
-.content {
-    background-color: #efefef;
-    width: auto;
-    height: 40em;
-}
-
-#bodyDiv {
-    padding-top: 1px;
-    height: 50em;
-    margin-top: 20px;
-    /* margin-bottom: 20px; */
-    text-align: center;
-    background-color: #efefef;
-}
-
-#paragraphDiv {
-    margin-left: 20%;
-    margin-right: 20%;
-    font-size: 20px;
-}
-
-.aboutContentDiv {
-    font-size: 20px;
-    line-height: 30px;
-}
-
-.green-text {
-    color: #38a61f;
-}
-
-#nihon-kawa {
-    /* border-color: black;
-    border-width: 1px;
-    border-style: solid; */
-}
-
-h1 {
-    font-size: 50px;
-    color: #4e524e;
-    margin-left: 35px;
-    margin-right: 35px;
-    margin-top: 15px;
-    margin-bottom: 5px;
-}
-
-h2 {
-    font-size: 50px;
-    margin-top: 50px;
-}
-
-h3 {
-    font-size: 25px;
-}
-
-.h3-padded {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 25px;
-}
-
-#about-h3 {
-    margin-top: 30px;
-}
-
-.indexP {
-    margin: 15px;
-    line-height: 30px;
-}
-
-ul, li, .navInline {
-    display: inline;
-}
-
-/* ul {
-    margin-left: 75px;
-} */
-
-a:link, a:visited {
-    color: #4e524e;
-    text-decoration-line: none;
-}
-
-a:hover {
-    color: #41d121;
+a {
+   
+    text-decoration: none;
 }
 
 li {
-    margin-left: 25px;
-    margin-right: 25px;
+    list-style: none;
 }
 
-i {
-    font-style: italic;
+svg {
+    fill: hsl(11deg 86% 63%);
+    width: 2rem;
+    height: 2rem;
 }
 
-b {
+a,
+p,
+h2,
+h3,
+span {
+    color: white;
+}
+
+body,
+#root,
+#root > div,
+#main-div {
+    width: 100%;
+    height: 100vh;
+}
+
+#main-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.index-component header #nav-home a,
+.about-component header #nav-about a,
+.work-component header #nav-work a,
+.contact-component header #nav-contact a  {
+    color: hsl(11deg 86% 63%);
+} 
+
+#header {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 1.5rem;
+    width: 40%;
+}
+
+.header__title {
+    color: white;
+    background-color: hsl(11deg 86% 63%);
+    font-size: 3rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    padding: 0.8rem 0.5rem 0.8rem 0.9rem;
+}
+
+.header__title:hover {
+    cursor: pointer;
+    color: hsl(11deg 86% 63%);
+    background-color: white;
+}
+
+.header__nav {
+    width: 100%;
+}
+
+.header__nav ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.nav-item {
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+.nav-item a {
+    color: hsl(0deg 0% 57%);
+}
+
+.nav-item a:hover {
+    color: white;
+}
+
+#content {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    align-items: center;
+    margin: 5rem 20rem;
+}
+
+.content__introduction {
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+    width: 63rem;
+    height: 20rem;
+}
+
+#content__introduction__name {
+    font-size: 6rem;
     font-weight: bold;
+    line-height: 5rem;
+    margin-top: 3rem;
 }
 
-.svg-container {
-    width: 5em;
-    height: 5em;
-    display: inline;
+#content__introduction__img {
+    border-radius: 10px;
+    bottom: 5%;
+    left: 31%;
+    position: absolute;
+    width: 350px;
+    height: 400px;
+    z-index: 100;
 }
 
-#footerParagraph {
-    margin-top: 0px;
-    padding-top: 2em;
+#content__introduction__role {
+    color: hsl(11deg 86% 63%);
+    font-size: 4.5rem;
+    font-weight: bold;
+    line-height: 4rem;
+    margin-top: 4rem;
+}
+
+#bio-description {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.bio-description__p-div {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 100%;
+
 }
 
 footer {
-    background-color: #38a61f;
-    padding-bottom: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+footer h3,
+#footer__links,
+#footer__name {
+    margin: 0.5rem;
+}
+
+@keyframes becomeVisible {
+    0% {
+        opacity: 0;
+        visibility: hidden;
+    }
+    100% {
+        opacity: 1;
+        visibility: visible;
+    }
+}
+
+body {
+    animation: 4s linear 0s 1 becomeVisible;
 }
