--- a/frontend/src/stylesheets/styles.css
+++ b/frontend/src/stylesheets/styles.css
@@ -29,6 +29,14 @@ svg {
     height: 2rem;
 }
 
+.header__logo {
+    border-radius: 30px;
+    box-shadow: 0 6px 19px hsl(11deg 61% 45%);
+    margin-top: 0;
+    width: 3rem;
+    height: 3rem;
+}
+
 a,
 p,
 h2,
@@ -65,7 +73,8 @@ body,
     justify-content: flex-start;
     align-items: center;
     margin-top: 1.5rem;
-    width: 40%;
+    margin-bottom: 2rem;
+    width: 30%;
 }
 
 .header__title {
@@ -84,7 +93,7 @@ body,
 }
 
 .header__nav {
-    width: 100%;
+    margin-left: 2rem;
 }
 
 .header__nav ul {
