--- a/frontend/src/stylesheets/styles.css
+++ b/frontend/src/stylesheets/styles.css
@@ -29,6 +29,15 @@ svg {
     height: 2rem;
 }
 
+p::selection {
+    background-color: hsl(11deg 86% 63%);
+}
+
+i::selection,
+span::selection {
+    background-color: hsl(11deg 61% 45%);
+}
+
 .header__logo {
     border-radius: 30px;
     box-shadow: 0 6px 19px hsl(11deg 61% 45%);
@@ -74,7 +83,6 @@ body,
     align-items: center;
     margin-top: 1.5rem;
     margin-bottom: 2rem;
-    width: 30%;
 }
 
 .header__title {
@@ -127,6 +135,7 @@ body,
     position: relative;
     display: flex;
     justify-content: space-around;
+    margin: 5rem 20rem;
     width: 63rem;
     height: 20rem;
 }
@@ -160,6 +169,16 @@ body,
     display: flex;
     flex-direction: row;
     align-items: center;
+    background-color: #19181873;
+    box-shadow: 0 6px 19px hsl(11deg 61% 45%);
+    width: 100%;
+}
+
+#bio-description__yokoso {
+    align-self: center;
+    color: hsl(11deg 61% 45%);
+    font-size: 3rem;
+    height: 4rem;
 }
 
 .bio-description__p-div {
@@ -167,7 +186,10 @@ body,
     justify-content: center;
     flex-direction: column;
     height: 100%;
-
+    margin-left: 20rem;
+    margin-right: 20rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
 }
 
 footer {
