Update work page. Add code_2.jpeg and work.css files to do so.

--- a/frontend/src/stylesheets/about.css
+++ b/frontend/src/stylesheets/about.css
@@ -3,12 +3,16 @@
     font-size: 6rem;
     font-weight: bold;
     height: 7rem;
+    padding-top: 3rem;
+    margin-bottom: 2rem;
 }
 
 .about__description {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-left: 20rem;
+    margin-right: 20rem;
 }
 
 .about__description__introduction {
