Add contact.css, index.css. Update all pages to be more mobile-friendly.

--- a/frontend/src/stylesheets/about.css
+++ b/frontend/src/stylesheets/about.css
@@ -1,3 +1,7 @@
+.about-component #header {
+    margin-bottom: 2rem;
+}
+
 #about__hi {
     color: hsl(11deg 86% 63%);
     font-size: 6rem;
@@ -20,7 +24,8 @@
     margin-bottom: 1rem;
 }
 
-.about__description__language {
+.about__description__language,
+.about__description__technology {
     margin-bottom: 1rem;
 }
 
@@ -36,4 +41,70 @@
     border-radius: 30px;
     box-shadow: 0 6px 19px hsl(11deg 61% 45%);
     margin-top: 1rem;
+}
+
+#about__hiring {
+    font-size: 1.2rem;
+    padding-left: 5rem;
+    padding-right: 5rem;
+}
+
+#about__hiring address {
+    display: inline;
+}
+
+@media (max-width: 1000px) {
+    .about__description {
+        margin-left: 10rem;
+        margin-right: 10rem;
+    }
+
+    #about__hiring {
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
+
+@media (max-width: 850px) {
+    #about__hi {
+        font-size: 5rem;
+    }
+}
+
+@media (max-width: 650px) {
+    #about__hi {
+        font-size: 4rem;
+    }
+}
+
+@media (max-width: 500px) {
+    #about__hi {
+        font-size: 3rem;
+    }
+}
+
+@media(max-width: 400px) {
+
+    #about__hi {
+        font-size: 2.5rem;
+    }
+
+    .about__description img {
+        width: 300px;
+        height: 200px;
+    }
+
+    .about__description__introduction,
+    #about__hiring {
+        font-size: 1.3rem;
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
+
+    .about__description__language,
+    .about__description__technology {
+        font-size: 1.2rem;
+        padding-left: 3rem;
+        padding-right: 3rem;
+    }
 }
