--- a/frontend/src/stylesheets/styles.css
+++ b/frontend/src/stylesheets/styles.css
@@ -62,6 +62,10 @@ span {
     color: white;
 }
 
+.orange-text {
+    color: hsl(11deg 86% 63%);
+}
+
 body,
 #root,
 #root > div,
@@ -90,7 +94,7 @@ body,
     justify-content: flex-start;
     align-items: center;
     margin-top: 1.5rem;
-    margin-bottom: 2rem;
+    margin-bottom: 7rem;
 }
 
 .header__title {
@@ -139,13 +143,11 @@ body,
 }
 
 .content__introduction {
-    position: relative;
     display: flex;
-    justify-content: space-around;
-    margin: 5rem 20rem;
+    justify-content: center;
     margin-bottom: 2rem;
-    width: 63rem;
     height: 20rem;
+    width: 100%;
 }
 
 #content__introduction__name {
@@ -155,10 +157,15 @@ body,
     margin-top: 3rem;
 }
 
+#content__introduction__img-div {
+    position: relative;
+    padding: 7rem;
+}
+
 #content__introduction__img {
     border-radius: 10px;
-    bottom: 5%;
-    left: 31%;
+    bottom: 0;
+    left: -25%;
     position: absolute;
     width: 350px;
     height: 400px;
@@ -263,4 +270,28 @@ footer h3,
 
 body {
     animation: 4s linear 0s 1 becomeVisible;
+}
+
+@media (max-width: 400px) {
+
+    #header {
+        flex-direction: column;
+        margin-bottom: 0;
+    }
+
+    .header__logo {
+        margin-bottom: 1rem;
+    }
+
+    .header__nav {
+        margin-left: 0;
+    }
+
+    #nav-contact {
+        margin-right: 0;
+    }
+
+    .content__introduction {
+        height: 15rem;
+    }
 }
