--- a/frontend/src/stylesheets/work.css
+++ b/frontend/src/stylesheets/work.css
@@ -1,3 +1,7 @@
+.work-component #header {
+    margin-bottom: 2rem;
+}
+
 .work-component #content {
     flex-direction: row;
     justify-content: space-evenly;
@@ -39,3 +43,34 @@
     transform: scale(1.1);
 }
 
+@media (max-width: 1200px) {
+
+    .work-component #content {
+        width: 100%;
+        align-items: flex-start;
+    }
+
+    #loop-blog h3,
+    #cv-application h3 {
+        font-size: 1.3rem;
+    }
+
+    #loop-blog img,
+    #cv-application img {
+        width: 300px;
+        height: 200px;
+    }
+}
+
+@media (max-width: 700px) {
+    .work-component #content {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #cv-application h3,
+    #loop-blog h3 {
+        text-align: center;
+        padding: 2rem 0;
+    }
+}
