--- a/frontend/src/stylesheets/styles.css
+++ b/frontend/src/stylesheets/styles.css
@@ -209,6 +209,11 @@ body,
     padding-bottom: 2rem;
 }
 
+.bio-description__p {
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
 footer {
     display: flex;
     flex-direction: column;
