Fix bug on about page where footer svgs had incorrect top margin. Fix SPA bug where reload on anything but '/' resulted in a 404 page not found.

--- a/frontend/src/stylesheets/about.css
+++ b/frontend/src/stylesheets/about.css
@@ -53,6 +53,10 @@
     display: inline;
 }
 
+.footer-svgs {
+    margin-top: 0 !important;
+}
+
 @media (max-width: 1000px) {
     .about__description {
         margin-left: 10rem;
