--- a/frontend/src/stylesheets/styles.css
+++ b/frontend/src/stylesheets/styles.css
@@ -33,6 +33,8 @@ li {
 
 .footer-svgs,
 svg {
+    border-radius: 30px;
+    box-shadow: 0 6px 19px hsl(11deg 61% 45%);
     fill: hsl(11deg 86% 63%);
     width: 2rem;
     height: 2rem;
